--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-Flask==3.0.0
-Flask-SQLAlchemy>=3.1
-SQLAlchemy>=2.0
+Flask
+Flask-SQLAlchemy
+SQLAlchemy
+gunicorn
+PyMySQL
 boto3
-PyMySQL==1.1.0
-gunicorn==21.2.0
-
-
-
-
